
2018-01-30  Ron Norman <rjn@inglenet.com>
	* codegen.c: Add check for field IS EXTERNAL

2018-01-29  Ron Norman <rjn@inglenet.com>
	* tree.c,tree.h,typeck.c: Fine tuning of arithmetic_osvs
	
2018-01-23  Ron Norman <rjn@inglenet.com>
	* tree.c: Fixed coding error to use CB_FIELD_PTR
	* codegen.c,typeck.c: Changed to use CB_FIELD_PTR as needed

2018-01-14  Ron Norman <rjn@inglenet.com>
	* error.c: add  cb_verify_x  
	* field.c: update call to  validate_move for
	           changes made in typeck.c
	* typeck.c,config.def: Check for config option
	   move-non-numeric-lit-to-numeric-is-zero
	 and change MOVE LOW-VALUES or HIGH-VALUES to PIC 9 DISPLAY field
	 into MOVE ZERO Micro Focus does this

2018-01-12  Ron Norman <rjn@inglenet.com>
	* typeck.c,config.def: Check for config option
	   move-figurative-constant-to-numeric and
	 report as directed

2018-01-12  Ron Norman <rjn@inglenet.com>
	* scanner.l: Updated to accept larger float constants

2018-01-03  Ron Norman <rjn@inglenet.com>
	* codegen.c: For FUNCTION-ID copy RETURNING 'cob_field'
	  so as to avoid passing pointer to data in C stack
	  after 'return'; This should avoid a MS C compiler warning

2017-12-31  Ron Norman <rjn@inglenet.com>
	* codegen.c,tree.c: Mark report fields as being referenced
	  so that the cob_field is always emited

2017-12-31  Ron Norman <rjn@inglenet.com>
	* parser.y,codegen.c: Accept  SUPPRESS WHEN LOW-VALUES
	                      Accept  SUPPRESS WHEN HIGH-VALUES

2017-12-22  Ron Norman <rjn@inglenet.com>
	* codegen.c: Set flag COB_FLAG_IS_FP in attributes for all FLOAT types

2017-12-21  Ron Norman <rjn@inglenet.com>
	* codegen.c: For REPORT pass CODE value to cob_report_initiate
	* parser.y: pass back CODE value

2017-12-11  Ron Norman <rjn@inglenet.com>
	* codegen.c: For FUNCTION-ID and RECURSIVE, generate all LINKAGE
	  and LOCAL-STORAGE fields with the 'cob_field' on the function
	  stack instead of making them 'static'. If static then the fields