@@ -45,3 +45,31 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE_ONLY prog.cob], [0], [], [])
 
 AT_CLEANUP
+
+AT_SETUP([Incorrect USAGE clause])
+AT_KEYWORDS([SCREEN])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID. prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 X             PIC X.
+       SCREEN  SECTION.
+        01 SG.
+           05 SI1   LINE 1 COL 1 PIC X FROM X.
+           05 SI2   LINE 2 COL 1 PIC X FROM SPACE.
+           05 SI2-2 LINE 2 COL 5 PIC X(03) FROM ALL SPACES.
+           05 BAD1  LINE 4 COL 1 PIC 9 BINARY FROM ZERO.
+           05 BAD2  LINE 4 COL 5 COMP-2 FROM ALL ZEROES.
+          PROCEDURE        DIVISION.
+             DISPLAY SG END-DISPLAY.
+            STOP RUN.                
+])
+
+AT_CHECK([$COMPILE -std=cobol2002 prog.cob ], [1], [], [prog.cob: 12: Error: 'BAD1' should be USAGE DISPLAY for SCREEN
+prog.cob: 13: Error: 'BAD2' should be USAGE DISPLAY for SCREEN
+])
+
+AT_CLEANUP
+
