@@ -1,5 +1,11 @@
 
 2018-01-30  Ron Norman <rjn@inglenet.com>
+	* parser.y: Have REPORT fields parse all USAGE so if it
+	           is not DISPLAY and meaningful error happens
+	* field.c: Add check for REPORT/SCREEN field not DISPLAY
+	   'fieldname' should be USAGE DISPLAY for REPORT/SECTION
+
+2018-01-30  Ron Norman <rjn@inglenet.com>
 	* codegen.c: Add check for field IS EXTERNAL
 
 2018-01-29  Ron Norman <rjn@inglenet.com>
